# propbot

./: .gitignore  README.md  cloudbuild.json  deploy.sh  dev.yaml  main.py  mypy.ini  prod.yaml  proposals.json  pyproject.toml  requirements.txt  setup.py  snapshot.py  snapshot_schema.json  twitter.py
.github/workflows/: cloudbuild-action.yaml
config/: dev.yaml  yaml_config_to_bash.sh
fodder/: get_top_space_avg_voters.cpy  get_top_space_avg_voters.py  scripts.sh  update_allowed_spaces.py
govbot/: __init__.py  allowed_spaces.json  firestore.py  log.py  main.py  proposal_filters.py  queue.py  snapshot.py  snapshot_schema.py  twitter.py
govbot/queries/: getEndingProposals.graphql  getProposals.graphql  getSpaceFollowers.graphql
queries/: getProposal.graphql  getProposals.graphql  getVotes.graphql
src/: firestore.py  main.py  proposal_filters.py  twitter.py
src/queries/: getEndingProposals.graphql
tests/: proposal_list.json  test_proposal_filters.py  test_twitter.py
